--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <section>
             <div class="yellow-line"></div>
-            <h1>To-do list</h1>
+            <h1>To-Do List</h1>
 
             <div class="sort-wrapper">
 
@@ -39,15 +39,4 @@
 
     <script src="scripts/script.js"></script>
 </body>
-
-<!-- <form class="input-tasks">
-                    <input class="input" type="text">
-                    <ul class="to-do-list"></ul>
-                    <button type='submit'>
-                        <div class="plus">+</div>
-                        <div class="button-text">Добавить</div>
-                    </button>
-                </form> -->
-
-
 </html>
